--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,29 +80,30 @@ th,
 tr,
 p,
 a {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 14px
+  font-family: 'Crimson Text', sans-serif;
+  font-size: 17px
 }
 
 strong {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 14px;
+  font-family: 'Crimson Text', sans-serif;
+  font-size: 17px;
+  font-weight: 900; /* or the highest weight supported by Crimson Text */
 }
 
 heading {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 22px;
+  font-family: 'Crimson Text', sans-serif;
+  font-size: 26px;
 }
 
 papertitle {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 14px;
+  font-family: 'Crimson Text', sans-serif;
+  font-size: 17px;
   font-weight: 700
 }
 
 name {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 32px;
+  font-family: 'Crimson Text', sans-serif;
+  font-size: 36px;
 }
 
 .one {
@@ -128,4 +129,12 @@ name {
 
 span.highlight {
   background-color: #ffffd0;
+}
+
+.stronger-bold {
+  font-weight: 900;
+}
+
+.underscored {
+  text-decoration: underline;
 }
